--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,11 @@
 * {font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: var(--white); 
+/*   background-color: var(--white);  */
+& .hidoh1 {
+  display: none;
+}
+
 }
 
 header{
@@ -20,6 +24,7 @@ header{
   align-items: center;
   & img {
     max-width: 15rem;
+    margin-left: 5rem;
   }
 }
 
@@ -169,7 +174,7 @@ header{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
-  margin: 5rem 15rem 10rem 15rem;
+  margin-inline: 5rem;
   @media (max-width: 900px) {
     margin: 0;
     background-color: hotpink;
@@ -177,12 +182,70 @@ header{
     justify-items: center;
   }
 }
+.bottomindexsection{
+  display: grid;
+  gap: 5rem;
+}
+
+.bigimgcontainerindex {
+  background-color: var(--white);
+  margin-top: 5rem;
+  margin-inline: 5rem;
+  display: inline-grid;
+  position: relative;
+  max-width: 1920px;
+  grid-template-columns: auto auto;
+  background-color: var(--white);
+  gap: 3em;
+  justify-items: center;
+  & img {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  & a{
+    display: grid;
+    background-color: var(--white);
+    padding: 5px;
+    justify-content: center;
+  }
+}
+
+.bigimgbottomindex{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  background-image: url(/assets/pairtogether.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 35rem;
+  margin-inline: 5rem;
+  & a:hover {
+    background-color: #000;
+    color: var(--white);
+  }
+  & .imgbutton-bottom{
+    background-color: var(--white);
+    color: var(--black);
+    border: .5px solid var(--black);
+    height: 2rem;
+  }
+  & a {
+    display: block;
+    margin-bottom: 1rem;
+    padding: .7rem;
+
+  }
+}
+
 .containerproducts {
   max-width: 1400px;
   padding-inline: 2rem;
   margin-inline: auto;
   margin-top: 2rem;
 }
+
 .cardsproducts {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -302,27 +365,7 @@ header{
   }
 }
 
-.stickyfooter{
-  display: grid;
-  background-color: #000;
-  width: 100vw;
-  margin-top: 3rem;
-  height: 500px;
-  position: sticky;
-  color: var(--white);
-  list-style: none;
-  & li {
- display: inline; 
- color: var(--white);
-
-  }
-}
-
-
-
-
-
-.fullcontent {
+.fullcontentabout {
   & h1 {
     padding: 1rem;
     max-width: 45rem;
@@ -339,7 +382,7 @@ header{
   }
 }
 
-.wrapper {
+.wrapperabout {
   background-color: var(--grey);
   margin-inline: auto;
   max-height: 30rem;
@@ -371,11 +414,19 @@ header{
     
   }
 }
+
 .fullcontentcontact {
   & h1 {
   display: none;
   }
+  & img {
+    display: block;
+    margin-inline: auto;
+    margin-top: 3rem;
+    max-width: 20rem;
+  }
 }
+
 .wrappercontact {
   background-color: var(--grey);
   margin-inline: auto;
@@ -383,10 +434,10 @@ header{
   /*display: flow-root;/*content cannot escape parent element*/
   & img {
     width: 100%;
-    object-fit: none;
+    object-fit: contain;
     object-position: 50%;
-    max-width: 1920px;
     max-height: 30rem;
+    margin-inline: auto;
   }  
   @media (min-width: 900px) {
     {padding: 0 10rem;
@@ -425,66 +476,6 @@ header{
     & img{
       display: none;
     }
-  }
-}
-
-
-
-
-
-.bottomindexsection{
-  display: grid;
-  gap: 5rem;
-}
-
-.bigimgcontainerindex {
-  background-color: var(--white);
-  margin-top: 5rem;
-  margin-inline: 5rem;
-  display: inline-grid;
-  position: relative;
-  max-width: 1920px;
-  grid-template-columns: auto auto;
-  background-color: var(--white);
-  gap: 3em;
-  justify-items: center;
-  & img {
-    width: 100%;
-    object-fit: cover;
-  }
-
-  & a{
-    display: grid;
-    background-color: var(--white);
-    padding: 5px;
-    justify-content: center;
-  }
-}
-
-.bigimgbottom{
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  background-image: url(/assets/pairtogether.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 35rem;
-  & a:hover {
-    background-color: #000;
-    color: var(--white);
-  }
-  & .imgbutton-bottom{
-    background-color: var(--white);
-    color: var(--black);
-    border: .5px solid var(--black);
-    height: 2rem;
-  }
-  & a {
-    display: block;
-    margin-bottom: 1rem;
-    padding: .7rem;
-
   }
 }
 
@@ -531,6 +522,35 @@ header{
   @media (max-width: 900px) {
     background-color: hotpink;
     grid-template-columns: 1fr;
+  }
+}
+footer {
+  margin-top: 5rem;
+}
+.footercollums{
+  min-height: 500px;
+  margin-inline: auto;
+  padding: 7rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: #000;
+  position: sticky;
+  color: var(--white);
+
+  @media (max-width: 900px) {
+    grid-template-columns: 1fr;
+    padding: 2rem;
+  }
+  & p {
+    font-size: 1.5rem;
+    font-weight: bolder;
+    margin-block: 1.5rem;
+  }
+  & ul { 
+    list-style: none;
+    & li {
+      margin-block: 1rem;
+    }
   }
 }
 
